# rsclip-wl

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: release.yml
crates/clipvault-core/: Cargo.toml
crates/clipvault-core/src/: classify.rs  config.rs  db.rs  lib.rs  models.rs  notify.rs  paste.rs  secrets.rs  storage.rs
crates/clipvault-core/src/db/: mod.rs  ocr.rs  schema.rs  secrets.rs
crates/clipvault-daemon/: Cargo.toml
crates/clipvault-daemon/src/: main.rs  output.rs  watcher.rs
crates/clipvault-daemon/src/commands/: delete.rs  list.rs  mod.rs  ocr.rs  paste.rs  pin.rs  store.rs
crates/clipvault-ui/: Cargo.toml
crates/clipvault-ui/resources/css/: clipvault.css
crates/clipvault-ui/src/: app.rs  cli.rs  events.rs  main.rs  notify.rs  state.rs  style.rs  window.rs
crates/clipvault-ui/src/actions/: clipboard.rs  ocr.rs  refresh.rs  secrets.rs  selection.rs
crates/clipvault-ui/src/components/: details.rs  footer.rs  list.rs  preview.rs  topbar.rs
crates/clipvault-ui/src/dialogs/: mod.rs
crates/rsclip-core/: Cargo.toml
crates/rsclip-core/src/: classify.rs  cli.rs  colors.rs  config.rs  favicons.rs  format.rs  lib.rs  links.rs  mime.rs  models.rs  notify.rs  ocr.rs  paste.rs  secrets.rs  storage.rs
crates/rsclip-core/src/db/: entries.rs  mod.rs  rows.rs  schema.rs  secrets.rs
crates/rsclip-daemon/: Cargo.toml
crates/rsclip-daemon/src/: favicons.rs  main.rs  output.rs  watcher.rs
crates/rsclip-daemon/src/commands/: delete.rs  favicons.rs  list.rs  mod.rs  ocr.rs  paste.rs  pin.rs  store.rs
crates/rsclip-ui/: Cargo.toml
crates/rsclip-ui/resources/css/: rsclip.css
crates/rsclip-ui/src/: app.rs  cli.rs  events.rs  main.rs  notify.rs  state.rs  style.rs  window.rs
crates/rsclip-ui/src/actions/: clipboard.rs  mod.rs  ocr.rs  refresh.rs  secrets.rs
crates/rsclip-ui/src/components/: details.rs  footer.rs  labels.rs  list.rs  mod.rs  preview.rs
crates/rsclip-ui/src/dialogs/: secret_alias.rs
packaging/aur/clipvault-bin/: .SRCINFO  PKGBUILD  README.md
packaging/aur/rsclip-bin/: .SRCINFO  PKGBUILD  README.md
packaging/aur/rsclip-wl-bin/: .SRCINFO  PKGBUILD  README.md
packaging/desktop/: clipvault.desktop  rsclip.desktop
packaging/systemd/: clipvaultd.service  rsclipd.service
scripts/: build-release-archive.sh  generate-aur-srcinfo.sh
