[workspace]
members = [
  "crates/clipvault-core",
  "crates/clipvault-daemon",
  "crates/clipvault-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "6"
gio = "0.21"
glib = "0.21"
gtk4 = { version = "0.10", features = ["v4_10"] }
once_cell = "1"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
