[package]
name = "clipvault-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "clipvaultd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clipvault-core = { path = "../clipvault-core" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

