[package]
name = "clipvault-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "clipvault"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clipvault-core = { path = "../clipvault-core" }
gio.workspace = true
glib.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
