[package]
name = "rsclip-daemon"
version = "0.1.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rsclipd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rsclip-core = { path = "../rsclip-core" }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
