[package]
name = "rsclip-daemon"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rsclipd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
image.workspace = true
rsclip-core = { path = "../rsclip-core" }
scraper.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
url.workspace = true
