[package]
name = "rsclip-ui"
version = "0.1.3"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "rsclip"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rsclip-core = { path = "../rsclip-core" }
gio.workspace = true
glib.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
